--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root {
+  --color-white: #FFFFFF;
+  --color-white-opacity-1: #FFFFFF33;
+  --color-white-opacity-2: #FFFFFF29;
+  --color-black: #000000;
+  --color-black-opacity-1: #00000066;
+  --color-black-opacity-2: #00000040;
+  --color-gray-1: #28272C;
+  --color-gray-2: #6A6A6A;
+  --color-gray-3: #B2B2B2;
+  --color-gray-4: #D1D1D1;
+  --color-red: #FF0000;
+  --color-red-opacity-1: #FF00004D;
+
+  --page-margin:20px;
+
+
+  font-family: 'Roboto', sans-serif;
+ 
+}
+a{
+  text-decoration: none;
+}
+li{
+  list-style: none;
+}
+
