--- a/src/elements/Header/Header.css
+++ b/src/elements/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   height: 70px;
-  background-color: var(--color-black-opacity-1);
+  background-color: var(--color-gray-2);
 }
 .headerContainer {
   display: flex;
