--- a/src/elements/Logo/Logo.css
+++ b/src/elements/Logo/Logo.css
@@ -13,6 +13,15 @@
 .logoTextSecond {
   display: block;
 }
+.logoIcon {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-image: url("./swan.gif");
+  background-repeat: no-repeat;
+  background-size: contain;
+
+}
 .logoTextFirst {
   margin-left: 10px;
   color: var(--color-red);
