--- a/src/elements/Aboutus/Aboutus.css
+++ b/src/elements/Aboutus/Aboutus.css
@@ -1,12 +1,14 @@
-.aboutUs{
-    min-height: 200px;
-    background-color: var(--color-gray-4);
+.aboutUs {
+  min-height: 200px;
+  background-color: var(--color-gray-4);
 }
-.associateField{
-    display: flex;
-    border: solid 2px var(--color-red);
-    border-radius: 10px;
-    min-height: 250px;
-    align-items: center;
-    justify-content: space-around;
+.associateField {
+  display: flex;
+
+  min-height: 250px;
+  align-items: center;
+  justify-content: space-around;
+}
+.associateField:nth-child(even) {
+  flex-direction: row-reverse;
 }
