--- a/src/elements/Pagebanner/Pagebanner.css
+++ b/src/elements/Pagebanner/Pagebanner.css
@@ -55,5 +55,11 @@
   background-color: var(--color-red);
   color: var(--color-white);
   justify-content: center;
+
   box-shadow: 0 3px 6px var(--color-red-opacity-1);
+}
+.pageBannerLink:hover {
+  transition: 2s;
+  background-color: var(--color-white);
+  color: var(--color-red);
 }
