offers square by map()

--- a/src/elements/Offer/Square/Square.css
+++ b/src/elements/Offer/Square/Square.css
@@ -29,7 +29,9 @@
 }
 .addNew {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   margin: 0;
 }
