--- a/src/elements/Logo/Logo.css
+++ b/src/elements/Logo/Logo.css
@@ -15,20 +15,21 @@
 }
 .logoIcon {
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   background-image: url("./swan.gif");
   background-repeat: no-repeat;
   background-size: contain;
-
 }
 .logoTextFirst {
   margin-left: 10px;
   color: var(--color-red);
-  font-weight: 800;
+  font-weight: 400;
+  font-size: medium;
 }
 .logoTextSecond {
   margin-left: 5px;
   color: var(--color-white);
-  font-weight: 700;
+  font-weight: 200;
+  font-size: medium;
 }
