--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 :root {
-  --color-white: #FFFFFF;
-  --color-white-opacity-1: #FFFFFF33;
-  --color-white-opacity-2: #FFFFFF29;
+  --color-white: #ffffff;
+  --color-white-opacity-2: #ffffff29;
   --color-black: #000000;
   --color-black-opacity-1: #00000066;
   --color-black-opacity-2: #00000040;
-  --color-gray-1: #28272C;
-  --color-gray-2: #6A6A6A;
-  --color-gray-3: #B2B2B2;
-  --color-gray-4: #D1D1D1;
-  --color-red: #FF0000;
-  --color-red-opacity-1: #FF00004D;
+  --color-gray-1: #28272c;
+  --color-gray-2: #6a6a6a;
+  --color-gray-3: #b2b2b2;
+  --color-gray-4: #d1d1d1;
+  --color-red: #ff0000;
+  --color-red-opacity-1: #ff00004d;
 
-  --page-margin:20px;
-
-
-  font-family: 'Roboto', sans-serif;
- 
+  font-family: "Roboto", sans-serif;
 }
-a{
+a {
   text-decoration: none;
 }
-li{
+li {
   list-style: none;
 }
-
