--- a/src/elements/Footer/Footer.css
+++ b/src/elements/Footer/Footer.css
@@ -2,18 +2,19 @@
   bottom: 0;
   width: 100%;
   height: 50px;
+  background-color: var(--color-black);
 }
 .footerContainer {
   width: 100%;
   height: 100%;
-  background-color: var(--color-black);
+
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 2em;
-  padding-right: 2em;
 }
 .logoAtFooter {
+  display: flex;
+
   height: 20px;
 }
 .logoAtFooterContainer {
